--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Sebastian Gonzalez</h1>
+    <table>
+        <thead>
+            <th>#</th>
+            <th>Nombre</th>
+        </thead>
+        <tr>
+            <td>213</td>
+            <td>Carlos</td>
+        </tr>
+    </table>
 </body>
 </html>
