--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spiderman</title>
 </head>
 <body>
-    <h1>Sebastian Gonzalez</h1>
+    <h1>Spiderman el mejor super heroe</h1>
     <table>
         <thead>
             <th>#</th>
