Pagina web de spiderman con videos

--- a/index.html
+++ b/index.html
@@ -1,21 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spiderman</title>
 </head>
+
 <body>
-    <h1>Spiderman el mejor super heroe</h1>
-    <table>
-        <thead>
-            <th>#</th>
-            <th>Nombre</th>
-        </thead>
-        <tr>
-            <td>213</td>
-            <td>Carlos</td>
-        </tr>
-    </table>
+    <h1 style="text-align: center;">Spiderman el mejor super heroe</h1>
+    <center>
+        <img src="/Desarrollo_web/img/spiderman.png" alt="Imagen spiderman" width="300px" height="300px">
+
+    </center>
+
+    <p><strong>Spider-Man</strong> es un personaje de superhéroe icónico de los cómics, creado por el escritor Stan Lee
+        y el
+        dibujante Steve
+        Ditko, y publicado por Marvel Comics. Su primera aparición fue en "Amazing Fantasy" #15 en agosto de 1962.
+
+        El verdadero nombre del héroe es Peter Parker, un joven estudiante de secundaria que vive con su tía May y
+        su tío Ben
+        en la ciudad ficticia de Nueva York. Un día, durante una visita a un laboratorio de ciencias, Peter es
+        mordido por
+        una araña radiactiva. Como resultado, adquiere habilidades sobrehumanas, incluyendo fuerza y agilidad
+        aumentadas, la capacidad de adherirse a superficies y un sentido arácnido que le advierte del peligro
+        inminente.</p>
+    <h2>Reparto</h2>
+    <ul>
+        <li>Joe 'Robbie' Robertson</li>
+        <li>Bill Nunn</li>
+        <li>Ring Annoucer</li>
+        <li>Bruce Campbell</li>
+        <li>BoneSaw McGraw</li>
+        <li>Randy Savage</li>
+        <li>Taxista</li>
+        <li>Peter Appel</li>
+        <li>Punk Rock Girl</li>
+        <li>Lucy Lawless</li>
+        <li>Ella misma</li>
+        <li>Macy Gray</li>
+        <li>Flash Thompson</li>
+        <li>Joe Manganiello</li>
+        <li>Maximilian Fargas</li>
+        <li>Gerry Becker</li>
+        <li>Henry Balkan</li>
+        <li>Jack Betts</li>
+        <li>General Slocum</li>
+        <li>Stanley Anderson</li>
+        <li>Dr. Mendell Stromm</li>
+        <li>Ron Perkins</li>
+        <li>Carjacker</li>
+        <li>Michael Papajohn</li>
+        <li>Simkins</li>
+        <li>K.K. Dodds</li>
+        <li>Betty Brant</li>
+        <li>Elizabeth Banks</li>
+        <li>Majordomo</li>
+        <li>John Paxton (II)</li>
+        <li>Philip Watson</li>
+        <li>Tim de Zarn</li>
+        <li>Madeline Watson</li>
+        <li>Taylor Gilbert</li>
+        <li>Wrestling Promoter</li>
+        <li>Larry Joshua</li>
+        <li>Wrestling Arena Guard</li>
+        <li>Timothy Patrick Quill</li>
+        <li>Flash's Crony</li>
+        <li>Jason Padgett</li>
+        <li>Professor</li>
+        <li>Shan Omar Huey</li>
+        <li>Girl on bus</li>
+        <li>Sally Livingstone</li>
+        <li>Doctor</li>
+        <li>Evan Arnold</li>
+        <li>Firefighter</li>
+        <li>Bill Calvert</li>
+        <li>Mother in Fire</li>
+        <li>Sylva Kelegian</li>
+        <li>Bone-ette</li>
+        <li>Lisa Danielle</li>
+        <li>Bone-ette</li>
+        <li>Natalie T. Yeo</li>
+        <li>Bone-ette</li>
+        <li>Erica D. Porter</li>
+        <li>Bone-ette</li>
+        <li>Kristen Davidson</li>
+        <li>Enfermera</li>
+        <li>Jill Sayre</li>
+        <li>Project co-ordinator</li>
+        <li>James Kevin Ward</li>
+        <li>Test Pilot</li>
+        <li>David Holcomb</li>
+    </ul>
+    <center>
+        <h3> Trailers y nuevos lanzamientos</h3>
+        <table>
+            <th><iframe width="300" height="300" src="https://www.youtube.com/embed/oBmazlyP220"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe></th>
+            <th><iframe width="300" height="300" src="https://www.youtube.com/embed/8S4v7aQxUVo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe></th>
+            <tr>
+                <th><iframe width="300" height="300" src="https://www.youtube.com/embed/rCIV0y8jNy4"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe></th>
+                <th><iframe width="300" height="300" src="https://www.youtube.com/embed/4rKFkLeRF3Q"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe></th>
+            </tr>
+        </table>
+
+    </center>
+
 </body>
+
 </html>
