--- a/actividad-1/index2.html
+++ b/actividad-1/index2.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center;">Spiderman el mejor super heroe</h1>
     <center>
-        <img src="/Desarrollo_web/img/spiderman.png" alt="Imagen spiderman" width="300px" height="300px">
+        <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2020/02/spider-man-1876543.jpg?tf=1200x" alt="Imagen spiderman" width="300px" height="300px">
 
     </center>
 
